--- a/config.yml
+++ b/config.yml
@@ -4,10 +4,6 @@ language: en
 pipeline:
   - name: WhitespaceTokenizer
   - name: RegexFeaturizer
-  - name: RegexEntityExtractor
-    case_sensitive: False
-    use_lookup_tables: True
-#    use_regexes: False
   - name: LexicalSyntacticFeaturizer
   - name: CountVectorsFeaturizer
   - name: CountVectorsFeaturizer
@@ -16,9 +12,12 @@ pipeline:
     max_ngram: 4
   - name: DIETClassifier
     epochs: 100
-#  - name: EntitySynonymMapper
+  - name: EntitySynonymMapper
   - name: ResponseSelector
     epochs: 100
+  - name: FallbackClassifier
+    threshold: 0.3
+    ambiguity_threshold: 0.1
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
